tdf#125039 sw_redlinehide: keep shape selected when changing anchor type

Avoid the problem by not moving the drawing object to the invisible
layer, which isn't necessary because it will be inserted immediately
anyway.

(regression from 214e6ed5286566e689a4ef13a9115e2ad38fff57)

Change-Id: I9936de990d1db56fa4c00c37d05b4ed2923790ff
Reviewed-on: https://gerrit.libreoffice.org/71685
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>